--- a/global.css
+++ b/global.css
@@ -40,14 +40,51 @@ h2{
     color: #30b8f7;
 }
 .icons{
+    display: flex;
     position: absolute;
-    padding-right: 135px;
+    width: 100%;
+    height: 30px;
+    justify-content: right;
+    top: 295px;
+    left: 95px;
 }
-.social{
-    max-height: 30px;
-    padding: 10px;
+.icons a{
+    height: 40px;
+    width: 40px;
+    opacity: .5;
+    vertical-align: center;
+}
+.icons a:hover{
+    opacity: 1;
+}
+.social1{
+    height: 40px;
+    width: 40px;
+    background-position: center;
+    background-image: url(https://i.imgur.com/RzjKtpK.png);
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+    border-radius: 50%;
+}
+.social2{
+    height: 40px;
+    width: 40px;
+    background-position: center;
+    background-image: url(https://i.imgur.com/tiargvZ.png);
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-color: #ffffff;
+    border-radius: 50%;
+    margin-left: 20px;
 }
 .wrapper{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
+#aboutwrapper{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -99,30 +136,30 @@ h2{
     transition: .5s ease;
     background-color: #171717c5;
   }
-  .title{
-      font-size: 24px;
-      text-align: center;
-      margin: 50px;
-      margin-top: 150px;
-      color: #ffffff;
-  }
-  .leftcontainer{
-      width: 50%;
-      object-fit: contain;
-      overflow: hidden;
-  }
-  .leftcontainer img{
-    margin: 40px;
+.title{
+    font-size: 24px;
+    text-align: center;
+    margin: 50px;
+    margin-top: 150px;
+    color: #ffffff;
 }
-  .leftcontainer img{
-      height: 500px;
-  }
-  .rightcontainer{
-      width: 50%;
-  }
-  .containertext{
-      margin: 40px;
-  }
+.leftcontainer{
+    width: 50%;
+    object-fit: cover;
+    overflow: hidden;
+}
+.leftcontainer img{
+    margin: 40px;
+    max-width: 100%;
+    height: auto;
+}
+.rightcontainer{
+    width: 50%;
+}
+.containertext{
+    margin: 40px;
+    max-width: 75%;
+}
 footer{
     width: 100%;
     height: 175px;
@@ -169,21 +206,33 @@ footer{
     width: 75%;
     margin: 50px 0px;
 }
-
-@media (max-width: 1200px){
+@media (max-width: 640px){
+    .header{
+        object-fit: scale-down;
+    }
     .icons{
-        padding-right: 30px;
+        justify-content: center;
+        left: -10px;
     }
-    .wrapper{
-        align-items: center;
+    #aboutwrapper{
+        flex-direction: column;
     }
+    .rightcontainer{
+        width: 100%;
+    }
+    .leftcontainer{
+        width:97.2%;
+        object-fit: contain;
+    }
+    .leftcontainer img{
+        margin: 10px;
+    }
+}
+@media (max-width: 1400px){
     .project{
         margin-left: 20px;
         margin-right: 20px;
         margin-bottom: 30px;
-    }
-    .links{
-        margin-left: 30px;
     }
     .portraitwrap{
         width: 30%;
