--- a/global.css
+++ b/global.css
@@ -11,11 +11,15 @@ header {
 h2{
     text-decoration: none;
 }
+h4{
+    font-weight: 1;
+    font-size: 10pt;
+}
 .logo{
     display: block;
     max-height: 180px;
     margin: auto;
-    padding-top: 90px;
+    padding-top: 80px;
 }
 .nav{
     width: 100%;
@@ -27,13 +31,10 @@ h2{
 .links{
     margin: 0 auto;
 }
-.links a:link{
+.links a{
     text-decoration: none;
     padding: 20px;
     font-size: 20px;
-    color: #000000;
-}
-.links a:visited{
     color: #000000;
 }
 .links a:hover{
@@ -56,6 +57,7 @@ h2{
 }
 .icons a:hover{
     opacity: 1;
+    transition: .5s ease;
 }
 .social1{
     height: 40px;
@@ -167,7 +169,7 @@ footer{
     text-align: center;
 }
 #footertag{
-    padding-top: 80px;
+    padding-top: 60px;
     color: #ffffff;
 }
 #btnwrapper{
@@ -206,9 +208,22 @@ footer{
     width: 75%;
     margin: 50px 0px;
 }
+.links a.active{
+    color: #30b8f7;
+}
+.footnotes{
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 8pt;
+    color:#8f8f8f;
+}
 @media (max-width: 640px){
     .header{
         object-fit: scale-down;
+    }
+    .logo{
+        padding-top: 70px;
     }
     .icons{
         justify-content: center;
@@ -227,14 +242,20 @@ footer{
     .leftcontainer img{
         margin: 10px;
     }
+    .paintingwrap{
+        margin: 20px 0px;
+    }
+    .portraitwrap{
+        width: 50%;
+    }
+    .footnotes{
+        width: 70%;
+    }
 }
 @media (max-width: 1400px){
     .project{
         margin-left: 20px;
         margin-right: 20px;
         margin-bottom: 30px;
-    }
-    .portraitwrap{
-        width: 30%;
     }
 }
