--- a/global.css
+++ b/global.css
@@ -49,20 +49,20 @@ h4{
     top: 295px;
     left: 95px;
 }
-.iconwrapper a{
+/* .iconwrapper{
+    height: 40px;
+    width: 40px;
+    padding: 0px 10px;
+} */
+.icons a{
     height: 40px;
     width: 40px;
     opacity: .5;
     vertical-align: center;
 }
-.iconwrapper a:hover{
+.icons a:hover{
     opacity: 1;
     transition: .5s ease;
-}
-.iconwrapper{
-    height: 40px;
-    width: 40px;
-    padding: 0px 10px;
 }
 .social1{
     height: 40px;
@@ -93,6 +93,14 @@ h4{
     background-repeat: no-repeat;
     background-color: #ffffff;
     border-radius: 50%;
+}
+.divider{
+    width: 10px;
+    height: 40px;
+}
+.dividerleft{
+    width: 40px;
+    height: 40px;
 }
 .wrapper{
     display: flex;
