--- a/global.css
+++ b/global.css
@@ -6,7 +6,7 @@ body{
 header {
     width: 100%;
     height: 360px;
-    background-color: #171717;
+    background-color: #ffffff;
 }
 h2{
     text-decoration: none;
@@ -15,11 +15,16 @@ h4{
     font-weight: 1;
     font-size: 10pt;
 }
+.topdivider{
+    width: 100%;
+    height: 30px;
+    background-color: #000000;
+}
 .logo{
     display: block;
     max-height: 180px;
     margin: auto;
-    padding-top: 80px;
+    padding-top: 100px;
 }
 .nav{
     width: 100%;
