--- a/global.css
+++ b/global.css
@@ -17,14 +17,16 @@ h4{
 }
 .topdivider{
     width: 100%;
-    height: 30px;
+    height: 50px;
     background-color: #000000;
+    padding-top: 10px;
 }
 .logo{
     display: block;
     max-height: 180px;
-    margin: auto;
-    padding-top: 100px;
+    margin: 0 auto;
+    padding-top: 90px;
+    padding-bottom: 20px;
 }
 .nav{
     width: 100%;
@@ -47,12 +49,12 @@ h4{
 }
 .icons{
     display: flex;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     height: 30px;
     justify-content: right;
-    top: 295px;
-    left: 95px;
+    /* top: 295px;
+    left: 95px; */
 }
 /* .iconwrapper{
     height: 40px;
@@ -60,8 +62,8 @@ h4{
     padding: 0px 10px;
 } */
 .icons a{
-    height: 40px;
-    width: 40px;
+    height: 30px;
+    width: 30px;
     opacity: .5;
     vertical-align: center;
 }
@@ -73,7 +75,7 @@ h4{
     height: 40px;
     width: 40px;
     background-position: center;
-    background-image: url(https://i.imgur.com/RzjKtpK.png);
+    background-image: url(src/images/Favicon.png);
     background-size: 20px 20px;
     background-repeat: no-repeat;
     background-color: #ffffff;
@@ -83,7 +85,7 @@ h4{
     height: 40px;
     width: 40px;
     background-position: center;
-    background-image: url(https://i.imgur.com/tiargvZ.png);
+    background-image: url(src/images/Favicon.png);
     background-size: 20px 20px;
     background-repeat: no-repeat;
     background-color: #ffffff;
@@ -93,14 +95,14 @@ h4{
     height: 40px;
     width: 40px;
     background-position: center;
-    background-image: url(https://i.imgur.com/v3Nnld8.png);
+    background-image: url(src/images/Favicon.png);
     background-size: 20px 20px;
     background-repeat: no-repeat;
     background-color: #ffffff;
     border-radius: 50%;
 }
 .divider{
-    width: 10px;
+    width: 20px;
     height: 40px;
 }
 .dividerleft{
@@ -279,6 +281,10 @@ footer{
     }
     .footnotes{
         width: 70%;
+    }
+    .dividerleft{
+        width: 0px;
+        height: 0px;
     }
 }
 @media (max-width: 1400px){
