--- a/global.css
+++ b/global.css
@@ -49,11 +49,6 @@ h4{
     top: 295px;
     left: 95px;
 }
-/* .iconwrapper{
-    height: 40px;
-    width: 40px;
-    padding: 0px 10px;
-} */
 .icons a{
     height: 40px;
     width: 40px;
@@ -241,6 +236,29 @@ footer{
     margin: 0 auto;
     font-size: 8pt;
     color:#8f8f8f;
+}
+#topBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: rgba(255, 255, 255, 0);
+    color: #30b8f7;
+    cursor: pointer;
+    padding: 10px 15px;
+    border-radius: 4px;
+    font-size: 16px;
+    opacity: .75;
+}
+
+#topBtn:hover {
+    opacity: 1;
+}
+#pagebtn{
+    width:60px;
 }
 @media (max-width: 640px){
     .header{
