--- a/global.css
+++ b/global.css
@@ -259,6 +259,28 @@ footer{
 #pagebtn{
     width:60px;
 }
+
+.testframe{
+    width: 100%;
+    height: 300px;
+    background-image: url(/src/images/Vroom\ Case\ Cover.png);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.testcontainer{
+    width: 50%;
+    height: 300px;
+    background-color: rgba(0, 0, 0, 0.925);
+    text-align: center;
+    padding-top: 50px;
+}
+
+
+
+
+
 @media (max-width: 640px){
     .header{
         object-fit: scale-down;
