--- a/global.css
+++ b/global.css
@@ -270,6 +270,14 @@ footer{
         justify-content: center;
         left: -20px;
     }
+    .nav{
+        width: 100%;
+        margin: 60px 0px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
     #aboutwrapper{
         flex-direction: column;
     }
