--- a/global.css
+++ b/global.css
@@ -274,9 +274,19 @@ footer{
         width: 100%;
         margin: 60px 0px;
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         align-items: center;
         justify-content: center;
+    }
+    .links{
+        margin: 0 auto;
+    }
+    .links a{
+        text-decoration: none;
+        padding: 20px;
+        font-size: 20px;
+        color: #000000;
     }
     #aboutwrapper{
         flex-direction: column;
