--- a/global.css
+++ b/global.css
@@ -283,9 +283,10 @@ footer{
         margin: 0 auto;
     }
     .links a{
+        width: 100%;
         text-decoration: none;
         padding: 20px;
-        font-size: 20px;
+        font-size: 30px;
         color: #000000;
     }
     #aboutwrapper{
