--- a/global.css
+++ b/global.css
@@ -280,6 +280,7 @@ footer{
         justify-content: center;
     }
     .links{
+        width: 100%;
         margin: 0 auto;
     }
     .links a{
