--- a/global.css
+++ b/global.css
@@ -274,12 +274,13 @@ footer{
         width: 100%;
         margin: 60px 0px;
         display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
         align-items: center;
         justify-content: center;
     }
     .links{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
         width: 100%;
         margin: 0 auto;
     }
