--- a/global.css
+++ b/global.css
@@ -279,7 +279,7 @@ footer{
         flex-direction: column;
         flex-wrap: wrap;
         margin: 0 auto;
-        align-items: center;
+        /* align-items: center; */
         justify-content: center;
     }
     .links a{
