--- a/global.css
+++ b/global.css
@@ -272,7 +272,7 @@ footer{
     }
     .nav{
         width: 100%;
-        margin: 35px 0px;
+        margin: 25px 0px;
     }
     .links{
         display: flex;
@@ -283,6 +283,7 @@ footer{
         /* justify-content: center; */
     }
     .links a{
+        margin: 0 auto;
         width: 100%;
         text-decoration: none;
         padding: 0px 20px;
