--- a/global.css
+++ b/global.css
@@ -272,7 +272,7 @@ footer{
     }
     .nav{
         width: 100%;
-        margin: 25px 0px;
+        margin: 30px 0px;
     }
     .links{
         display: flex;
@@ -281,9 +281,9 @@ footer{
         margin: 0 auto;
         align-items: center;
         /* justify-content: center; */
+        text-align: center;
     }
     .links a{
-        margin: 0 auto;
         width: 100%;
         text-decoration: none;
         padding: 0px 20px;
